# epl_mastermind_v2

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: weekly_pipeline.yaml
dlt/: football_data_pipeline.py  fpl_pipeline.py
ml_models/: model.py
notebooks/: weekly_picks.py
notebooks/__marimo__/session/: weekly_picks.py.json
sqlmesh/: config.yaml
sqlmesh/macros/: __init__.py
sqlmesh/models/marts/: mart_backtest_picks.sql  mart_fixture_ticker.sql  mart_player_picks.sql
sqlmesh/models/staging/: seed_team_mapping.sql  stg_fixtures.sql  stg_matches.sql  stg_player_gameweeks.sql  stg_players.sql  stg_teams.sql
sqlmesh/seeds/: seed_team_mapping.csv
